# chatbot-tributos

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  ACESSO_RAPIDO.md  ARCHITECTURE.md  AUTOMACAO-N8N.md  BEM-VINDO.txt  CHANGELOG.md  CHECKLIST.md  COMANDOS-UTEIS.md  COMANDOS_DOCKER.md  CONCLUSAO_OBSERVABILIDADE.md  CONFIGURAR-WORKFLOW.md  CONFIGURAR_N8N.md  CONTRIBUTING.md  DEPLOY-PRODUCTION.md  DEPLOY.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER_DESKTOP.md  GRAFANA_SETUP.md  GUIA-RAG-N8N.md  GUIA-RAPIDO.md  GUIA_VALIDACAO_MENSAGEM_REAL.md  INSTRUCOES-FINAIS.md  LICENSE  LIMPEZA-REPOSITORIO.md  LLM_PROVIDER=groq.txt  MANIFEST.in  MELHORIAS_IMPLEMENTADAS.md  MIGRACAO-MAKEFILE.md  MIGRATION-GUIDE.md  Makefile  N8N_CHATBOT_COMPLETO.md  N8N_WORKFLOW.md  OBSERVABILIDADE_FINAL.md  POST-REFACTORING-GUIDE.md  PRODUCTION-README.md  (+35 more)
.github/: README.md  copilot-instructions.md
.github/workflows/: ci.yml
bot/: __init__.py  ai_bot.py  link_router.py
bridge/base/: 0-whatsapp-ai-chatbot-namespace.yaml  api-CUsersarturchatbot-tributoswhatsapp-ai-chatbotexports-persistentVolumeClaim.yaml  api-CUsersarturchatbot-tributoswhatsapp-ai-chatbotlogs-persistentVolumeClaim.yaml  api-CUsersarturchatbot-tributoswhatsapp-ai-chatbotragdata-persistentVolumeClaim.yaml  api-chroma_data-persistentVolumeClaim.yaml  api-deployment.yaml  api-expose.yaml  api-service.yaml  kustomization.yaml  n8n-deployment.yaml  n8n-expose.yaml  n8n-n8n_data-persistentVolumeClaim.yaml  n8n-service.yaml  tributos_network-network-policy.yaml  waha-deployment.yaml  waha-expose.yaml  waha-service.yaml  waha-waha_data-persistentVolumeClaim.yaml
bridge/overlays/desktop/: api-CUsersarturchatbot-tributoswhatsapp-ai-chatbotexports-persistentVolumeClaim.yaml  api-CUsersarturchatbot-tributoswhatsapp-ai-chatbotlogs-persistentVolumeClaim.yaml  api-CUsersarturchatbot-tributoswhatsapp-ai-chatbotragdata-persistentVolumeClaim.yaml  api-chroma_data-persistentVolumeClaim.yaml  api-service.yaml  kustomization.yaml  n8n-n8n_data-persistentVolumeClaim.yaml  n8n-service.yaml  waha-service.yaml  waha-waha_data-persistentVolumeClaim.yaml
deploy/bootstrap/: README.md  n8n-api-config.sh  n8n-bootstrap.sh
deploy/caddy/: Caddyfile
deploy/caddy/site/: index.html
docs/: BEM-VINDO.txt  CONFIGURAR_WEBHOOK.md  DEPLOY.md  DEPLOYMENT.md  DOCS_TRIBUTOS.md  GUIA_COMPLETO.md  INDEX.md  INDICE.md  MIGRACAO_STACK.md  ORGANIZATION_SUMMARY.md  PRODUCTION-README.md  PROJECT_STRUCTURE.md  QUICK_START_DOCKER.md  QUICK_START_IP.md  README.md  STATUS.md
grafana/dashboards/: chatbot-dashboard.json
grafana/provisioning/dashboards/: default.yml
grafana/provisioning/datasources/: prometheus.yml
n8n/workflows/: chatbot_completo_n8n.json  chatbot_completo_orquestracao.json  chatbot_orquestracao_plus_menu.json  chatbot_rag_completo_auto.json  chatbot_rag_tributos.json  chatbot_webhook_simples.json  waha_to_api.json  waha_to_api_8c0ac011.json  waha_to_api_with_typing.json
rag/: load_knowledge.py
rag/data/: README.md
rag/data/faqs/: FAQ_Alvaras.md  FAQ_Certidoes.md  FAQ_IPTU.md  FAQ_ISS.md  FAQ_ITBI.md  FAQ_NFSe.md  FAQ_Parcelamento.md
rag/data/leis/: NT-DECR-055-2024.html  NT-DECR-057-2012.html  NT-DECR-061-2012.html  NT-DECR-079-2011.html  NT-DECR-131-2015.html  NT-DECR-200-2025.html  NT-IN-001-2015.html  NT-IN-001-2018.html  NT-IN-001-2025.html  NT-LC-033-2003.html  NT-LC-095-2005.html  NT-LC-096-2005.html  NT-LC-661-2017.html  NT-LC-678-2020.html  NT-LC-690-2021.html  NT-LC-704-2023.html  NT-LC-705-2023.html  NT-LC-706-2023.html  NT-LC-707-2023.html  NT-LC-729-2024.html  NT-LC-730-2024.html  NT-LC-731-2024.html  NT-LC-732-2024.html  NT-LC-733-2024.html  NT-LC-734-2024.html  NT-LC-735-2024.html  NT-LC-738-2025.html  NT-LC-739-2025.html  NT-LC-740-2025.html  NT-LC-742-2025.html  NT-LC-743-2025.html  NT-LC-744-2025.html  NT-LC-745-2025.html  NT-LC-746-2025.html  NT-LEI-1671-2000.html  NT-LEI-1736-2000.html  NT-LEI-1738-2000.html  NT-LEI-1739-2000.html  NT-LEI-1753-2001.html  NT-LEI-1858-2002.html  (+6 more)
rag/data/manuais/: Manual_Calculo_IPTU.md  Manual_Calculo_ISS.md  Manual_Emissao_NFSe.md  Manual_Isencoes_Beneficios.md  Manual_Parcelamento_Debitos.md  (+1 more)
reverse-proxy/: .gitkeep  traefik.yml
scripts/: _compose.ps1  auto-deploy.ps1  bootstrap-no-domain.ps1  check-dns.ps1  check-dns.sh  check-waha-auth.ps1  cleanup-observabilidade.ps1  commit-refactoring.ps1  configurar-rag-completo.ps1  deploy-completo.ps1  deploy-interactive.ps1  export-history.ps1  export-summary.ps1  fix-waha-webhook-now.ps1  gen-caddy-passhash.ps1  health-check-local.ps1  health-check.ps1  health-check.sh  install-api-native.ps1  install-auto-start.ps1  install-watchdog.ps1  load-knowledge.ps1  load-knowledge.sh  logs-api.ps1  observabilidade.ps1  post-api-webhook.ps1  pre-deploy-check.ps1  rebuild.ps1  run-api-native.ps1  setup-api-native.ps1  setup-local.ps1  start-api-native.ps1  start-waha-session.ps1  stop-api-native.ps1  test-minimal-webhook.ps1  test-n8n-webhook.ps1  test.ps1  testar-sistema-completo.ps1  uninstall-api-native.ps1  uninstall-auto-start.ps1  (+13 more)
scripts/migrations/: init.sql  migrate_chroma_to_qdrant.py
services/: __init__.py  config.py  logging_setup.py  metrics.py  structured_logging.py  version.py  waha.py
tests/: test_ai_bot.py  test_health.py  test_waha.py
tools/: export_waha_history.py
(+5 files in other folders)
