# =============================================================================
# pyproject.toml - Chatbot de Tributos Nova Trento/SC
# =============================================================================

[project]
name = "chatbot-tributos"
version = "1.0.0"
description = "Sistema de chatbot inteligente para atendimento automatizado sobre tributos municipais via WhatsApp"
authors = [
    {name = "Prefeitura Municipal de Nova Trento/SC", email = "ti@novatrento.sc.gov.br"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["chatbot", "whatsapp", "rag", "llm", "tributos", "n8n", "waha"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Government",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/arturmelo2/chatbot-tributos"
Repository = "https://github.com/arturmelo2/chatbot-tributos"
Issues = "https://github.com/arturmelo2/chatbot-tributos/issues"
Documentation = "https://github.com/arturmelo2/chatbot-tributos/blob/main/README.md"

# -----------------------------------------------------------------------------
# Black - Formatação de Código
# -----------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# -----------------------------------------------------------------------------
# Ruff - Linter
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.isort]
known-first-party = ["bot", "services", "rag", "tools"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

# -----------------------------------------------------------------------------
# Mypy - Type Checking
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
allow_redefinition = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# -----------------------------------------------------------------------------
# Pytest - Testes
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# -----------------------------------------------------------------------------
# Coverage - Cobertura de Código
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# -----------------------------------------------------------------------------
# Build System
# -----------------------------------------------------------------------------
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
